--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
 1.1.2
     -   Added Categories:
-        -   Potion (separate from other consumables), Block, Brick, Wood, Tool, Special (boss summon, stat increase items) Misc_Materials (that fail to fit any other category)
-        -   tweaked Seed, many other categories & sort order.
+        -   Potion (separate from other consumables), Block, Brick, Wood, Tool, Special (boss summon, stat increase items), Misc_Materials (that fail to fit any other category)
+        -   tweaked sort order of categories and individual category sorting rules.
+        -   Fixed shift-right-click picking up items bug.
 
 Version 1.1.1+tr14a
     -   Added new Categories, all pulled out of the "tile" category:
