--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,10 @@
     -   Removed the separate chest buttons (at least for now).
     -   Added keybind-tip to button names/tooltips.
     -   Added modoptions to show/hide tooltips, show/hide keybind-hints
+    -   Some random extras to the buttons:
+        -   The icon-buttons for Sort will now reverse-sort on right-click. Similarly but backwards for reverse-sort.
+        -   For no reason whatsoever LootAll in icon mode will clean stacks on right click.
+        -   The text version of LootAll now toggles to Sort when pressing shift.  This sort button also reverse-sorts on r-click.
 
 1.2.0-rc2
     -   Improved multiplayer support:
